# chess

./: CMakeLists.txt  main.cpp
Assets/: BitBoard.hpp  Container.hpp  Helper.hpp  PopUp.hpp  PopUpInterface.hpp
Board/: board.cpp  board.h  board.hpp
Engine/: Engine.hpp  EvaluateBoard.hpp  MoveSimulator.hpp
EventDispatcher/: EventDispatcher.hpp  EventListenerInterface.hpp
EventDispatcher/Listeners/: CapturePieceListener.hpp  CloseWindowListener.hpp  HoverPieceListener.hpp  MovePieceListener.hpp  SelectPieceListener.hpp
GameState/: GameState.hpp
Moves/: Capture.hpp  Castle.hpp  CheckEscape.hpp  Move.hpp  MoveHistoryElement.hpp  MoveInstruction.hpp  Promote.hpp
Piece/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
Piece/Base/: MoveIndicator.hpp  Piece.hpp
Piece/Factory/: PieceFactory.hpp
Serivces/: CapurePieceService.hpp  CheckMateService.hpp  CheckMoveSimulator.hpp  MovePieceService.hpp  SelectPieceService.hpp
